--- a/KrausxRGA/UI/wndBoxInformation.xaml
+++ b/KrausxRGA/UI/wndBoxInformation.xaml
@@ -42,6 +42,15 @@
                                 <Canvas Height="117" Width="790">
                                     <Image Name="imgUser" Source="/KrausRGA;component/Images/UserIcon.png" Canvas.Left="10" Canvas.Top="36" Height="51" Width="60"></Image>
                                     <TextBlock Name="txtUserName" Text="User not Logged." Foreground="WhiteSmoke" FontSize="20" Width="255" Canvas.Left="70" Canvas.Top="36" Height="51" />
+                                    <TextBlock Name="txtdatetime" Text="{Binding currentdate, StringFormat=\{0:MM/dd/yyyy \}}"  Foreground="WhiteSmoke" FontSize="20" Width="255" Canvas.Left="514" Canvas.Top="10" Height="31" />
+
+                                    <!--<Label xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+       xmlns:s="clr-namespace:System;assembly=mscorlib"
+                                        Content="{x:Static s:DateTime.Now}" FontSize="25" Foreground="White" Canvas.Left="370" Canvas.Top="26" >
+                                        
+                                    </Label>-->
+                                    
                                 </Canvas>
                             </Border>
                             <Border CornerRadius="20" BorderThickness="0,3" BorderBrush="#FF517F95" Height="419" Width="798" Canvas.Top="122">
